--- a/WolvenKit/Views/JournalEditor/JournalEditorView.xaml
+++ b/WolvenKit/Views/JournalEditor/JournalEditorView.xaml
@@ -1,7 +1,7 @@
 ﻿<catel:DataWindow x:Class="WolvenKit.Views.JournalEditor.JournalEditorView"
                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                  xmlns:catel="http://schemas.catelproject.com">
+                  xmlns:catel="http://schemas.catelproject.com" IsVisibleChanged="DataWindow_IsVisibleChanged">
 
     <Grid>
         <Grid.RowDefinitions>
