--- a/WolvenKit/Views/AudioTool/Radio/RadioPlayerView.xaml
+++ b/WolvenKit/Views/AudioTool/Radio/RadioPlayerView.xaml
@@ -1,7 +1,7 @@
 ﻿<catel:UserControl x:Class="WolvenKit.Views.AudioTool.Radio.RadioPlayerView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol">
+                   xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol" IsVisibleChanged="UserControl_IsVisibleChanged">
 
     <Grid >
         <Border Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}" CornerRadius="5" Margin="10" VerticalAlignment="Bottom" Height="35" >
