--- a/WolvenKit/Views/Backstage/RecentlyUsedItemsView.xaml
+++ b/WolvenKit/Views/Backstage/RecentlyUsedItemsView.xaml
@@ -10,7 +10,7 @@
                    xmlns:orccontrols="http://schemas.wildgums.com/orc/controls" 
                    xmlns:orctheming="http://schemas.wildgums.com/orc/theming"
                    mc:Ignorable="d" 
-                   d:DesignHeight="300" d:DesignWidth="300">
+                   d:DesignHeight="300" d:DesignWidth="300" IsVisibleChanged="UserControl_IsVisibleChanged">
 
     <Grid x:Name="topGrid">
         <Grid.RowDefinitions>
