--- a/WolvenKit/Views/DocumentView.xaml
+++ b/WolvenKit/Views/DocumentView.xaml
@@ -16,7 +16,7 @@
     xmlns:conv="clr-namespace:WolvenKit.Layout.Converters"
 	d:DesignHeight="450"
 	d:DesignWidth="800"
-	mc:Ignorable="d">
+	mc:Ignorable="d" IsVisibleChanged="UserControl_IsVisibleChanged">
     <Grid>
         <Grid.Resources>
             <conv:ExtensionToImageConverter x:Key="ExtensionToImageConverter"/>
