--- a/WolvenKit/Views/HomePage/HomePageView.xaml
+++ b/WolvenKit/Views/HomePage/HomePageView.xaml
@@ -11,7 +11,7 @@
     xmlns:Fluent="urn:fluent-ribbon"
     mc:Ignorable="av"
     
-    x:Class="WolvenKit.Views.HomePage.HomePageView">
+    x:Class="WolvenKit.Views.HomePage.HomePageView" IsVisibleChanged="UserControl_IsVisibleChanged">
 
     <catel:UserControl.Resources>
         <ResourceDictionary>
