--- a/WolvenKit/Views/ImportView.xaml
+++ b/WolvenKit/Views/ImportView.xaml
@@ -12,7 +12,7 @@
              xmlns:behavior="clr-namespace:WolvenKit.Behavior" 
              xmlns:i1="http://schemas.microsoft.com/xaml/behaviors"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800" IsVisibleChanged="UserControl_IsVisibleChanged">
     <Grid
         xmlns:conv="clr-namespace:WolvenKit.Layout.Converters">
         <Grid.Resources>
