--- a/WolvenKit/Views/IntegratedToolsPages/CyberCAT/CyberCATPageView.xaml
+++ b/WolvenKit/Views/IntegratedToolsPages/CyberCAT/CyberCATPageView.xaml
@@ -1,7 +1,8 @@
 ﻿<catel:UserControl x:Class="WolvenKit.Views.IntegratedToolsPages.CyberCAT.CyberCATPageView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:catel="http://schemas.catelproject.com">
+                   xmlns:catel="http://schemas.catelproject.com"
+                   IsVisibleChanged="UserControl_IsVisibleChanged">
 
     <Grid>
         <TextBlock Text="CyberCAT" HorizontalAlignment="Center" VerticalAlignment="Center"/>
