--- a/WolvenKit/Views/LogView.xaml
+++ b/WolvenKit/Views/LogView.xaml
@@ -6,7 +6,7 @@
                    xmlns:local="clr-namespace:WolvenKit.Views"
                    xmlns:catel="http://schemas.catelproject.com"
                    mc:Ignorable="d" 
-                   d:DesignHeight="450" d:DesignWidth="800">
+                   d:DesignHeight="450" d:DesignWidth="800" IsVisibleChanged="UserControl_IsVisibleChanged">
     <Grid>
         <RichTextBox x:Name="LogRichTextBox" IsReadOnly="True"/>
     </Grid>
