--- a/WolvenKit/Views/ProjectExplorerView.xaml
+++ b/WolvenKit/Views/ProjectExplorerView.xaml
@@ -11,7 +11,7 @@
              xmlns:ei="http://schemas.microsoft.com/expression/2010/interactions"
              xmlns:behavior="clr-namespace:WolvenKit.Behavior" xmlns:i1="http://schemas.microsoft.com/xaml/behaviors"
                    mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800" IsVisibleChanged="UserControl_IsVisibleChanged">
     <Grid
         xmlns:conv="clr-namespace:WolvenKit.Layout.Converters">
         <Grid.Resources>
