--- a/WolvenKit/Views/SettingsPages/GeneralSettingsView.xaml
+++ b/WolvenKit/Views/SettingsPages/GeneralSettingsView.xaml
@@ -1,7 +1,11 @@
 ﻿<catel:UserControl x:Class="WolvenKit.Views.SettingsPages.GeneralSettingsView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol" xmlns:sp="clr-namespace:WolvenKit.Views.SettingsPages.SubPages.General">
+                   xmlns:catel="http://schemas.catelproject.com"
+                   xmlns:hc="https://handyorg.github.io/handycontrol"
+                   xmlns:sp="clr-namespace:WolvenKit.Views.SettingsPages.SubPages.General" 
+                   IsVisibleChanged="UserControl_IsVisibleChanged"
+                   >
 
     <Grid hc:ThemeManager.AccentColor="{DynamicResource MahApps.Brushes.Accent3}" Background="{DynamicResource Fluent.Ribbon.Brushes.Backstage.Background}">
         <hc:SideMenu Width="150" SideBrush="{DynamicResource MahApps.Brushes.Accent}" HorizontalAlignment="Left" >
