--- a/WolvenKit/Views/SettingsWindow.xaml
+++ b/WolvenKit/Views/SettingsWindow.xaml
@@ -2,7 +2,7 @@
                   xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                   xmlns:catel="http://schemas.catelproject.com"
-                  xmlns:orccontrols="http://schemas.wildgums.com/orc/controls">
+                  xmlns:orccontrols="http://schemas.wildgums.com/orc/controls" IsVisibleChanged="DataWindow_IsVisibleChanged">
 
     <Grid>
         <Grid.RowDefinitions>
