--- a/WolvenKit/Views/Wizards/FeedbackWizardView.xaml
+++ b/WolvenKit/Views/Wizards/FeedbackWizardView.xaml
@@ -1,7 +1,7 @@
 ﻿<catel:UserControl x:Class="WolvenKit.Views.Wizards.FeedbackWizardView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:catel="http://schemas.catelproject.com" xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks" xmlns:hc="https://handyorg.github.io/handycontrol" xmlns:rv="clr-namespace:WolvenKit.Views.Wizards.WizardPages.FeedbackWizard">
+                   xmlns:catel="http://schemas.catelproject.com" xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks" xmlns:hc="https://handyorg.github.io/handycontrol" xmlns:rv="clr-namespace:WolvenKit.Views.Wizards.WizardPages.FeedbackWizard" IsVisibleChanged="UserControl_IsVisibleChanged">
     <catel:UserControl.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
