--- a/WolvenKit/Views/Wizards/InstallerWizardView.xaml
+++ b/WolvenKit/Views/Wizards/InstallerWizardView.xaml
@@ -5,7 +5,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"                
     xmlns:catel="http://schemas.catelproject.com"             
     xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"              
-    xmlns:hc="https://handyorg.github.io/handycontrol">
+    xmlns:hc="https://handyorg.github.io/handycontrol" IsVisibleChanged="UserControl_IsVisibleChanged">
 
 
     <catel:UserControl.Resources>
