--- a/WolvenKit/Views/Wizards/PublishWizardView.xaml
+++ b/WolvenKit/Views/Wizards/PublishWizardView.xaml
@@ -1,7 +1,7 @@
 ﻿<catel:UserControl x:Class="WolvenKit.Views.Wizards.PublishWizardView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                   xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol" xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks">
+                   xmlns:catel="http://schemas.catelproject.com" xmlns:hc="https://handyorg.github.io/handycontrol" xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks" IsVisibleChanged="UserControl_IsVisibleChanged">
 
 
     <catel:UserControl.Resources>
